# CICD

./: function_app.py  pyproject.toml  requirements.txt
.github/workflows/: ci_pipeline.yml
src/cicd/: function_app.py
tests/: test_function_app.py
